# zeldia

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
zeldia/: _about.py  client.py  converters.py  events.py  exceptions.py  gateway.py  runner.py
zeldia/enums/: __init__.py  channel_type.py  interaction.py  opcodes.py
zeldia/flags/: __init__.py  intents.py
zeldia/gateway/: __init__.py  gateway.py  runner.py
zeldia/models/: __init__.py  channel.py  message.py  snowflake.py  thread.py  user.py
zeldia/models/channels/: base.py
zeldia/rest/: __init__.py  http.py  rest.py  route.py
