[tool.poetry]
name = "zeldia"
version = "0.1.0"
description = "A minimal Discord API wrapper"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"
flake8-bugbear = "^22.10.27"
flake8-import-order = "^0.18.1"
flake8-tidy-imports = "^4.8.0"
flake8-future-annotations = "^1.0.0"
pep8-naming = "^0.13.2"
black = "^22.10.0"
isort = "^5.10.1"
pyright = "^1.1.277"
pre-commit = "^2.20.0"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
precommit = "pre-commit install"
lint = "pre-commit run --all-files"
